# UMVC3HitboxViewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat
Injector/: injector.cpp
include/: config.h  logger.h  shared_overlay_data.h
include/core/: memory.h
include/game/: box.h  camera.h  character.h  game_engine.h
src/: box.cpp  camera.cpp  character.cpp  dllmain.cpp  game_engine.cpp  logger.cpp  overlay_app.cpp
utils/: MemoryMgr.h  addr.cpp
